crates/test-ui/ui/mainthreadmarker_not_send_sync.stderr
error[E0277]: `*mut ()` cannot be shared between threads safely
 --> ui/mainthreadmarker_not_send_sync.rs
  |
  |     needs_sync::<MainThreadMarker>();
  |                  ^^^^^^^^^^^^^^^^ `*mut ()` cannot be shared between threads safely
  |
  = help: within `MainThreadMarker`, the trait `Sync` is not implemented for `*mut ()`
note: required because it appears within the type `PhantomData<*mut ()>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: ?Sized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `MainThreadMarker`
 --> $WORKSPACE/crates/objc2/src/main_thread_marker.rs
  |
  | pub struct MainThreadMarker {
  |            ^^^^^^^^^^^^^^^^
note: required by a bound in `needs_sync`
 --> ui/mainthreadmarker_not_send_sync.rs
  |
  | fn needs_sync<T: Sync>() {}
  |                  ^^^^ required by this bound in `needs_sync`

error[E0277]: `*mut ()` cannot be sent between threads safely
 --> ui/mainthreadmarker_not_send_sync.rs
  |
  |     needs_send::<MainThreadMarker>();
  |                  ^^^^^^^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
  |
  = help: within `MainThreadMarker`, the trait `Send` is not implemented for `*mut ()`
note: required because it appears within the type `PhantomData<*mut ()>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: ?Sized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `MainThreadMarker`
 --> $WORKSPACE/crates/objc2/src/main_thread_marker.rs
  |
  | pub struct MainThreadMarker {
  |            ^^^^^^^^^^^^^^^^
note: required by a bound in `needs_send`
 --> ui/mainthreadmarker_not_send_sync.rs
  |
  | fn needs_send<T: Send>() {}
  |                  ^^^^ required by this bound in `needs_send`
